--- a/src/components/TemplateListPage/style.css
+++ b/src/components/TemplateListPage/style.css
@@ -2,14 +2,20 @@ table {
   width: 100%;
 }
 
+th {
+  text-align: center !important;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
 .text-center {
   text-align: center;
 }
 
 .changeBtn {
-  background-color: #FFF;
+  background-color: transparent;
   border: none;
-  align: right;
 }
 
 .changeBtn:hover {
